--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -57,6 +57,7 @@
                 "example": "3 notes"
             }
         }
-    }
+    },
 
+    "wait_for_login": "Please wait while we log you in"
 }
